--- a/Rulesets/cleric_subclasses.yaml
+++ b/Rulesets/cleric_subclasses.yaml
@@ -1,38 +1,38 @@
-   - - Unity Domain Abilities: Spell DC
-       - Spellcasting:
-         1st Level: Heroism, Shield of Faith
-         3rd Level: Aid, Warding Bond
-         5th Level: Beacon of Hope, Sending
-         7th Level: Aura of Purity, Guardian of Faith
-         9th Level: Greater Restoration, Rary's Telepathic Bond 
-       - Emboldening Bond: you can forge an empowering bond between allies. As an action, you can choose two willing creatures you can see within 30 feet of you (this can include yourself) and create a magical bond between them.
-                           While either bonded creature is within 30 feet of the other, the creature can roll a d4 and add the number rolled to an attack roll, an ability check, or a saving throw it makes. Each creature can add 
-                           the d4 no more than once per turn. The bond lasts for 1 hour or until you use this feature again. You can use this feature once, and you regain the ability to do so when you finish a long rest. You can
-                           also expend a spell slot to use the feature again.
-       - Channel Divinity - Shared Burden: you can use your Channel Divinity to protect your allies through the strength of your shared bonds. When a creature you can see within 30 feet of you takes damage, you can use your 
-                                           reaction to choose a number of other willing creatures you can see, up to a number of creatures equal to your Wisdom modifier (minimum of one creature). Distribute the damage taken 
-                                           between the original target and the chosen creatures. Each creature must take at least 1 damage. Apply any damage resistance or vulnerability of the creatures involved after you 
-                                           distribute the damage.
-       - Protective Bond: the bond you forge between people shields them from harm. While either creature chosen for your Emboldening Bond feature is within 30 feet of the other, the creature can use its reaction to grant 
-                          resistance to all damage to the other creature when that other creature takes damage. This resistance lasts until the end of the current turn.
-       - Potent Spellcasting: you add your Wisdom modifier to the damage you deal with any cleric cantrip. 
-       - Enduring Unity: the bonds you create endure across vast distances. Creatures affected by your Emboldening Bond feature gain its benefits, as well as those of your Protective Bond feature, while they are on the same 
-                         plane of existence as each other. Additionally, when a creature chosen for your Emboldening Bond is reduced to 0 hit points, their bonded partner gains the following benefits for 1 minute, or until the 
-                         creature regains at least 1 hit point;
-                         - The creature has advantage on attack rolls, ability checks, and saving throws
-                         - The creature gains resistance to all damage
-                         - As an action, the creature can touch their bonded partner to expend and roll any number of Hit Dice. Their bonded partner regains a number of hit points equal to the total rolled.       
+    - Unity Domain Abilities:
+      - Spellcasting: Spell DC
+        1st Level: Heroism, Shield of Faith
+        3rd Level: Aid, Warding Bond
+        5th Level: Beacon of Hope, Sending
+        7th Level: Aura of Purity, Guardian of Faith
+        9th Level: Greater Restoration, Rary's Telepathic Bond 
+      - Emboldening Bond: you can forge an empowering bond between allies. As an action, you can choose two willing creatures you can see within 30 feet of you (this can include yourself) and create a magical bond between them.
+                          While either bonded creature is within 30 feet of the other, the creature can roll a d4 and add the number rolled to an attack roll, an ability check, or a saving throw it makes. Each creature can add 
+                          the d4 no more than once per turn. The bond lasts for 1 hour or until you use this feature again. You can use this feature once, and you regain the ability to do so when you finish a long rest. You can
+                          also expend a spell slot to use the feature again.
+      - Channel Divinity - Shared Burden: you can use your Channel Divinity to protect your allies through the strength of your shared bonds. When a creature you can see within 30 feet of you takes damage, you can use your 
+                                          reaction to choose a number of other willing creatures you can see, up to a number of creatures equal to your Wisdom modifier (minimum of one creature). Distribute the damage taken 
+                                          between the original target and the chosen creatures. Each creature must take at least 1 damage. Apply any damage resistance or vulnerability of the creatures involved after you 
+                                          distribute the damage.
+      - Protective Bond: the bond you forge between people shields them from harm. While either creature chosen for your Emboldening Bond feature is within 30 feet of the other, the creature can use its reaction to grant 
+                         resistance to all damage to the other creature when that other creature takes damage. This resistance lasts until the end of the current turn.
+      - Potent Spellcasting: you add your Wisdom modifier to the damage you deal with any cleric cantrip. 
+      - Enduring Unity: the bonds you create endure across vast distances. Creatures affected by your Emboldening Bond feature gain its benefits, as well as those of your Protective Bond feature, while they are on the same 
+                        plane of existence as each other. Additionally, when a creature chosen for your Emboldening Bond is reduced to 0 hit points, their bonded partner gains the following benefits for 1 minute, or until the 
+                        creature regains at least 1 hit point;
+                        - The creature has advantage on attack rolls, ability checks, and saving throws
+                        - The creature gains resistance to all damage
+                        - As an action, the creature can touch their bonded partner to expend and roll any number of Hit Dice. Their bonded partner regains a number of hit points equal to the total rolled.       
 
          
          
          
-  - - Trickery Domain Abilities:
+    - Trickery Domain Abilities:
         - Spellcasting: Spell DC
-           1st Level: Charm Person, Disguise Self
-           3rd Level: Mirror Image, Pass Without Trace
-           5th Level: Blink, Dispel Magic
-           7th Level: Dimension Door, Polymorph 
-           9th Level: Dominate Person, Modify Memory
+          1st Level: Charm Person, Disguise Self
+          3rd Level: Mirror Image, Pass Without Trace
+          5th Level: Blink, Dispel Magic
+          7th Level: Dimension Door, Polymorph 
+          9th Level: Dominate Person, Modify Memory
         - Blessing of the Trickster: you can use your action to touch a willing creature other than yourself to give it advantage on Dexterity (Stealth) checks. This blessing lasts for 1 hour or until you use this feature again.
         - Invoke Duplicity: you can use your Channel Divinity to create an illusory duplicate of yourself. As an action, you create a perfect illusion of yourself that lasts for 1 minute, or until you lose your concentration 
                             (as if you were concentrating on a spell). The illusion appears in an unoccupied space that you can see within 30 feet of you. As a bonus action on your turn, you can move the illusion up to 30 feet 
@@ -47,13 +47,13 @@
            
            
            
-   - - Arcana Domain Abilities:
+    - Arcana Domain Abilities:
         - Spellcasting: Spell DC
-           1st Level: Detect Magic, Magic Missle
-           3rd Level: Magic Weapon, Nystul's Magic Aura
-           5th Level: Dispel Magic, Magic Circle
-           7th Level: Arcane Eye, Leomund's Secret Chest
-           9th Level: Planar Binding, Teleportation Circle
+          1st Level: Detect Magic, Magic Missle
+          3rd Level: Magic Weapon, Nystul's Magic Aura
+          5th Level: Dispel Magic, Magic Circle
+          7th Level: Arcane Eye, Leomund's Secret Chest
+          9th Level: Planar Binding, Teleportation Circle
         - Channel Divinity - Arcane Abjuration: As an action, you present your holy symbol, and one celestial, elemental, fey, or fiend of your choice that is within 30 feet of you must make a Wisdom saving throw, provided 
                                                 that the creature can see or hear you. If the creature fails its saving throw, it is turned for 1 minute or until it takes any damage. A turned creature must spend its turns 
                                                 trying to move as far away from you as it can, and it can't willingly end its move in a space within 30 feet of you. It also can't take reactions. For its action, it can only 
@@ -68,7 +68,7 @@
                           
                           
                           
-   - - Forge Domain Abilities:
+    - Forge Domain Abilities:
        - Spellcasting: Spell DC
          1st Level: Identify, Searing Smite
          3rd Level: Heat Metal, Magic Weapon
@@ -93,7 +93,7 @@
    
    
    
-   - - Order Domain Abilities:
+    - Order Domain Abilities:
        - Spellcasting: Spell DC
          1st Level: Command, Heroism 
          3rd Level: Hold Person, Zone of Truth
@@ -117,14 +117,14 @@
  
  
  
-    - - Madness Domain Abilities: 
+    - Madness Domain Abilities: 
        - Spellcasting: Spell DC
-          Cantrips: Vicious Mockery
-          1st Level: Dissonant Whispers, Hideous Laughter
-          3rd Level: Crown of Madness, Phantasmal Force
-          5th Level: Fear, Incite Self-Harm
-          7th Level: Phantasmal Killer, Staggering Smite
-          9th Level: Modify Memory, Phantasmal Plunge
+         Cantrips: Vicious Mockery
+         1st Level: Dissonant Whispers, Hideous Laughter
+         3rd Level: Crown of Madness, Phantasmal Force
+         5th Level: Fear, Incite Self-Harm
+         7th Level: Phantasmal Killer, Staggering Smite
+         9th Level: Modify Memory, Phantasmal Plunge
        - Divine Hallucinations: you can use an action to enter a catatonic trance to receive warnings from your god via hallucination. You become incapacitated for 1 minute as you experience a vivid hallucination that might be 
                                 prophetic. The DM rolls a d6 in secret. On a roll of a 5 or 6, the DM shows you a likely future involving a real threat you're likely to face soon. On any other roll the DM shows you a paranoid 
                                 vision of an unlikely future involving threats that are not real or that you're unlikely to face, such as a betrayal from allies that are actually trustworthy, or an attack from monsters that 
@@ -144,7 +144,7 @@
 
 
 
-   - - Grave Domain Abilities:
+    - Grave Domain Abilities:
        - Spellcasting: Spell DC
          1st Level: Bane, False Life
          3rd Level: Gentle Repose, Ray of Enfeeblement
@@ -170,7 +170,7 @@
 
 
 
-   - - Life Domain Abilities:
+    - Life Domain Abilities:
        - Spellcasting: Spell DC
          1st Level: Bless, Cure Wounds
          3rd Level: Lesser Restoration, Spiritual Weapon
@@ -191,14 +191,14 @@
                           
                           
                           
-   - - Death Domain Abilities:
+    - Death Domain Abilities:
        - Spellcasting: Spell DC
-          Cantrips: Toll The Dead
-          1st Level: False Life, Ray of Sickness
-          3rd Level: Blindness/Deafness, Ray of Enfeeblement
-          5th Level: Animate Dead, Vampiric Touch
-          7th Level: Blight, Death Ward
-          9th Level: Antilife Shell, Cloudkill
+         Cantrips: Toll The Dead
+         1st Level: False Life, Ray of Sickness
+         3rd Level: Blindness/Deafness, Ray of Enfeeblement
+         5th Level: Animate Dead, Vampiric Touch
+         7th Level: Blight, Death Ward
+         9th Level: Antilife Shell, Cloudkill
        - Bonus Proficiency: you gain proficiency with martial weapons.
        - Reaper: you learn one necromancy cantrip of your choice from any spell list. When you cast a necromancy cantrip that normally targets only one creature, the spell can instead target two creatures 
                  within range and within 5 feet of each other
@@ -212,14 +212,14 @@
                           
                           
                           
-   - - Knowledge Domain Abilities: 
+    - Knowledge Domain Abilities: 
        - Spellcasting: Spell DC
-          1st Level: Command, Identify
-          3rd Level: Augury, Suggestion
-          5th Level: Nondetection, Speak with Dead
-          7th Level: Arcane Eye, Confusion
-          9th Level: 	Legend Lore, Scrying
-       - Blessing of Knowledge: you learn two languages of your choice. You also become proficient in your choice of two of the following skills: Arcana, History, Nature, or Religion. Your proficiency bonus is doubled for any 
+         1st Level: Command, Identify
+         3rd Level: Augury, Suggestion
+         5th Level: Nondetection, Speak with Dead
+         7th Level: Arcane Eye, Confusion
+         9th Level: 	Legend Lore, Scrying
+       - Blessing of Knowledge: you learn two languages of your choice. You also become proficient in your choice of two of the following skills; Arcana, History, Nature, or Religion. Your proficiency bonus is doubled for any 
                                 ability check you make that uses either of those skills.
        - Channel Divinity:
          - Knowledge of Ages: you can use your Channel Divinity to tap into a divine well of knowledge. As an action, you choose one skill or tool. For 10 minutes, you have proficiency with the chosen skill or tool.
@@ -240,7 +240,7 @@
 
 
 
-   - - Peace Domain Abilities:
+    - Peace Domain Abilities:
        - Spellcasting: Spell DC 
          1st Level: Heroism, Sanctuary
          3rd Level: Aid, Warding Bond
@@ -263,7 +263,7 @@
                          
                          
                          
-   - - Twilight Domain Abilities:
+    - Twilight Domain Abilities:
        - Spellcasting: Spell DC
          1st Level: Faerie Fire, Sleep
          3rd Level: Moonbeam, See Invisibility
@@ -285,11 +285,11 @@
                           1 minute. You can use this bonus action a number of times equal to your proficiency bonus, and you regain all expended uses when you finish a long rest.
        - Divine Strike: you gain the ability to infuse your weapon strikes with divine energy. Once on each of your turns when you hit a creature with a weapon attack, you can cause the attack to deal an extra 1d8 radiant damage.
                         When you reach 14th level, the extra damage increases to 2d8.
-       - Twilight Shroud: the twilight that you summon offers a protective embrace: you and your allies have half cover while in the sphere created by your Twilight Sanctuary. 
+       - Twilight Shroud: the twilight that you summon offers a protective embrace; you and your allies have half cover while in the sphere created by your Twilight Sanctuary. 
        
        
        
-   - - Light Domain Abilities:
+    - Light Domain Abilities:
        - Spellcasting: Spell DC
          1st Level: Burning Hands, Faerie Fire
          3rd Level: Flaming Sphere, Scorching Ray
@@ -310,7 +310,7 @@
                           
                           
                           
-   - - Nature Domain Abilities:
+    - Nature Domain Abilities:
        - Spellcasting: Spell DC
          1st Level: Animal Friendship, Speak with Animals
          3rd Level: Barkskin, Spike Growth
@@ -330,7 +330,7 @@
                            
                            
                            
-   - - Tempest Domain Abilities:
+    - Tempest Domain Abilities:
        - Spellcasting: Spell DC
          1st Level: Fog Cloud, Thunderwave
          3rd Level: Gust of Wind, Shatter
@@ -350,7 +350,7 @@
        
        
        
-   - - War Domain Abilities:
+    - War Domain Abilities:
        - Spellcasting: Spell DC
          1st Level: Divine Favor, Shield of Faith
          3rd Level: Magic Weapon, Spiritual Weapon
