--- a/Rulesets/pugilist_subclasses.yaml
+++ b/Rulesets/pugilist_subclasses.yaml
@@ -1,16 +1,16 @@
-   - - Piss and Vinegar Fight Club Abilities:
+    - Piss and Vinegar Fight Club Abilities:
        - Bonus Proficiency: you gain proficiency with the Intimidation skill if you don’t have it already.
        - Salty Salute: you have mastered the art of the enraging insult. You can use a bonus action on your turn to provoke a creature within 60 feet who can see or hear you. That creature must make a Wisdom saving throw. On a 
                        failure, the creature takes your fisticuff’s damage die + your Charisma modifier in psychic damage and has disadvantage on any attack rolls it makes that do not include you as a target before the start of 
                        your next turn. For any of your Piss & Vinegar features that require your opponent to make a saving throw, the saving DC is calculated as follows;
                        Piss & Vinegar save DC = 8 + your proficiency bonus + your Charisma modifier
        - Dirty Tricks: you have a few tricks up your sleeve to even the odds when the going gets rough. You can each of these dirty tricks once and regain their use when you finish a short or long rest.
-                       Heelstomper: When you deal damage with an unarmed attack, you attempt to slow the creature you hit. The creature must make a Dexterity saving throw. On a failure, you gain 1 moxie point (up to your maximum)
-                                    and its movement speed is halved for one minute.
-                       Low Blow: When you deal damage with an unarmed attack you can choose to hit them below the belt. The creature must make a Strength saving throw. On a failure, you gain 1 moxie point (up to your maximum)and
-                                 it is knocked prone.
-                       Pocket Sand: You can use a bonus action to attempt to blind a creature within 5 feet. The creature must make a Constitution saving throw. On a failure, you gian 1 moxie point (up to your maximum) and it is
-                                    blinded until the end of its next turn.
+         Heelstomper: When you deal damage with an unarmed attack, you attempt to slow the creature you hit. The creature must make a Dexterity saving throw. On a failure, you gain 1 moxie point (up to your maximum)
+                      and its movement speed is halved for one minute.
+         Low Blow: When you deal damage with an unarmed attack you can choose to hit them below the belt. The creature must make a Strength saving throw. On a failure, you gain 1 moxie point (up to your maximum)and
+                   it is knocked prone.
+         Pocket Sand: You can use a bonus action to attempt to blind a creature within 5 feet. The creature must make a Constitution saving throw. On a failure, you gian 1 moxie point (up to your maximum) and it is
+                      blinded until the end of its next turn.
        - Mean Old Cuss: your threats and mean spirited tricks pack an extra punch. When you make a Charisma (Intimidation) ability check, you can use your reaction and spend 1 moxie to give yourself advantage on the roll. When a
                         creature makes a saving throw against one of your Piss & Vinegar features, you can use your reaction and spend 1 moxie to give that roll disadvantage.
        - The Uncouth Art: you gain the ability to offend every creature in the room with minimal effort. When you use your Salty Salute feature, you can choose to target a number of creatures within 60 feet who can see or hear 
@@ -19,7 +19,7 @@
                           
                           
                           
-   - - Arena Royale Fight Club Abilities:.
+    - Arena Royale Fight Club Abilities:
        - Bonus Proficiency: you gain proficiency in the Performance skill, if you don’t have it already. If you do, you gain proficiency in your choice of the Intimidation or Persuasion skill.
        - Persona Libre: you create an alternate persona that you can adopt or discard as a bonus action on your turn. When you create an alternate persona you should give the persona a striking name as well as some physical 
                         signifier (such as a mask, colorful cape, or another prominent idiosyncratic feature). Unless you tell a creature, or the creature sees you adopt your persona, they do not know you and the adopted persona
@@ -37,7 +37,7 @@
                          
                          
                          
-   - - Bloodhound Bruisers Fight Club Abilities:.
+    - Bloodhound Bruisers Fight Club Abilities:
        - Ever Vigilant: you have advantage on initiative rolls. During the first round of combat, you have advantage on attack rolls against creatures who haven’t acted yet.
        - Detective Work: you gain proficiency with two of the following skills of your choice; Insight, Investigation, or Perception. In addition, when you make an Intelligence (Investigation), Wisdom (Insight), or Wisdom 
                         (Perception) ability check you can spend 1 moxie point to gain advantage on that ability check.
@@ -55,7 +55,7 @@
                          
                          
                          
-   - - Dog & Hound Fight Club Abilities:
+    - Dog & Hound Fight Club Abilities:
        - Bonus Proficiency: you gain proficiency with the Animal Handling skill if you don’t already have it. If you do, you gain proficiency in your choice of the Perception or Survival skill.
        - Brawler’s Best Friend: you gain a hound that accompanies you on your adventures and fights alongside you. Your hound can be any breed of dog or similar canine creature, but uses the statistics of a wolf (found in 
                                 appendix A of the Monster Manual). You add your proficiency bonus to your hound’s AC, saving throws, attack rolls, and damage rolls. For each level you gain after 3rd, your hound gains an 
@@ -65,9 +65,9 @@
                                 new one by spending 8 hours bonding with a canine animal that isn’t hostile to you.
        - Mutt With Moxie: you share everything with your faithful hound; food, shelter, even moxie. When you use certain moxie abilities, your hound gains a benefit as well.
        - Brace Up: When you gain temporary hit points as a result of using your Brace Up moxie ability, your hound gains the same number of temporary hit points.
-         - The Old One-Two: When you use your The Old OneTwo moxie ability, your hound can make one or both attacks instead of you.
-         - Stick and Move: When you use your Stick and Move moxie ability, your hound can take the Dash action.
-         - Arcanine Bite: your hound’s attacks count as magical for the purpose of overcoming resistance and immunity to non-magical attacks and damage.
+         The Old One-Two: When you use your The Old OneTwo moxie ability, your hound can make one or both attacks instead of you.
+         Stick and Move: When you use your Stick and Move moxie ability, your hound can take the Dash action.
+         Arcanine Bite: your hound’s attacks count as magical for the purpose of overcoming resistance and immunity to non-magical attacks and damage.
        - Coordinated Attack: you and your canine companion form a more potent fighting team. When you use the Attack action on your turn, if your hound can see you, it can use its reaction to make a melee attack.
        - Hound’s Best Friend: when a creature deals damage to your hound with an attack, you can use your reaction to make an opportunity attack against that creature if you are within range.
        - Dire Hound: you use the statistics for a dire wolf (found in appendix A of the Monster Manual), instead of a wolf, for your hound, except that its size remains Medium. These statistics are modified as described in your 
@@ -75,12 +75,12 @@
                      
                      
                      
-   - - The Squared Circle Fight Club Abilities:
+    - The Squared Circle Fight Club Abilities:
        - Groundwork: you gain the following additional moxie features.
-                     - Compression Lock: When a creature attempts to break a grapple with you and succeeds, you can use your reaction and spend 1 moxie point to force the creature to roll again. The creature must use the second 
-                                         result.
-                     - Quick Pin: When a hostile creature’s movement provokes an opportunity attack from you, you can use your reaction and spend 1 moxie point to make a grapple attack instead of an opportunity attack.
-                     - To the Mat: You can use a bonus action and spend 1 moxie point to make a grapple attack against a creature within range. If successful, the creature is also knocked prone.
+         Compression Lock: When a creature attempts to break a grapple with you and succeeds, you can use your reaction and spend 1 moxie point to force the creature to roll again. The creature must use the second 
+                           result.
+         Quick Pin: When a hostile creature’s movement provokes an opportunity attack from you, you can use your reaction and spend 1 moxie point to make a grapple attack instead of an opportunity attack.
+         To the Mat: You can use a bonus action and spend 1 moxie point to make a grapple attack against a creature within range. If successful, the creature is also knocked prone.
        - Meat Shield: when you have an enemy creature grappled, you gain half cover against all attacks made against you by a creature you are not grappling. When a weapon attack made by a creature you are not grappling misses 
                       you, you may use your reaction and spend 1 moxie point to have that creature make the same attack with a new roll against an enemy creature you are grappling.
        - Heavyweight: you count as one size larger than you are for the purposes of grappling. In addition, you can move your full movement speed when you are dragging or carrying a grappled creature your size or smaller.
@@ -89,7 +89,7 @@
                        
                        
                        
-   - - The Sweet Science Fight Club Abilities:
+    - The Sweet Science Fight Club Abilities:
        - Cross Counter: you can block the brunt of an attack and launch one of your own in the same fluid motion. You can use your reaction and spend 2 moxie points to reduce the damage of a melee weapon attack made against you 
                         by 1d10 + your Strength modifier + your pugilist level. If you reduce the damage to 0, you can make an unarmed strike, or pugilist weapon attack, against a creature within range as part of the same 
                         reaction.
