--- a/Rulesets/witch_subclasses.yaml
+++ b/Rulesets/witch_subclasses.yaml
@@ -1,4 +1,4 @@
-   - - Covenant of Blood Abilites:
+    - Covenant of Blood Abilites:
        - Spellcasting: Spell DC
          3rd level: Hold Person, Locate Object
          5th level: Remove Curse, Vampiric Touch
@@ -18,7 +18,7 @@
                                
                                
                                
-   - - Covenant of Charm Abilites:
+    - Covenant of Charm Abilites:
        - Spellcasting: Spell DC
          3rd level: Detect Thoughts, Suggestion
          5th level: Hypnotic Pattern, Tongues
@@ -39,7 +39,7 @@
        
        
        
-   - - Covenant of Ruin Abilites:
+    - Covenant of Ruin Abilites:
        - Spellcasting: Spell DC
          3rd level: Crown of Madness, Shatter
          5th level: Bestow Curse, Call Lightning
@@ -56,7 +56,7 @@
                            
                            
                            
-   - - Covenant of Shadows Abilites:
+    - Covenant of Shadows Abilites:
        - Spellcasting: Spell DC
          3rd level: Darkness, Pass Without Trace
          5th level: Feign Death, Nondetection
@@ -75,7 +75,7 @@
                           
                           
                           
-   - - Covenant of Silver Abilites:
+    - Covenant of Silver Abilites:
        - Spellcasting: Spell DC
          3rd level: Alter Self, Mirror Image
          5th level: Clairvoyance, Major Image
@@ -98,7 +98,7 @@
                           
                           
                           
-   - - Covenant of Steel Abilites:
+    - Covenant of Steel Abilites:
        - Spellcasting: Spell DC
          3rd level: Branding Smite, Spiritual Weapon
          5th level: Crusader's Mantle, Phantom Steed
@@ -120,7 +120,7 @@
                      
                      
                      
-   - - Covenant of Unity Abilites:
+    - Covenant of Unity Abilites:
        - Spellcasting: Spell DC
          3rd level: Augury, Blur
          5th level: Phantom Steed, Spirit Guardians
