--- a/Rulesets/doctor_subclasses.yaml
+++ b/Rulesets/doctor_subclasses.yaml
@@ -1,4 +1,4 @@
-   - - Surgeon Abilities:
+    - Surgeon Abilities:
        - Expert Practice:  you can now add your intelligence modifier to the result of any healing ability you perform.
        - Surgery: you have gained the confidence to delve deeper into the bodies of your patients. You operate on an injured subject, curing them of any ailments, both mundane and magical. The target regains a number of hit points
                   equal to their maximum. Any hit points the target gains over their maximum become temporary hit points. This takes 2 full hours from start to finish. 
@@ -18,10 +18,10 @@
                                
                                
                                
-   - - Pharmacist Abilities:
+    - Pharmacist Abilities:
        - Potioneers Kit: your doctor's bag has been modified to accommodate your specialization. It functions as normal but also replaces the need for Alchemist's Supplies, Herbalism Kit and Poisoner's Kit
        - Routine Brewer: you have made crafting healing potions a daily part of your life and it takes considerably less time and effort to craft them. Use the chart below
-                         Potion                          Crafting Time           Cost:
+                         Potion                          Crafting Time           Cost
                          Antitoxin                       1 Hour                  25gp
                          Potion of Healing               2 Hours                 25gp
                          Potion of Greater Healing       6 Hours                 125gp
@@ -35,42 +35,42 @@
                               learn its formula by researching its components. The rarity of the potion determines the time it takes you to study it, at the end of which you must make a medicine check. On a success you gain the 
                               ability to craft that potion, however the original potion is destroyed regardless of seccess or failure. Crafting the potion cost half the potions value in materials and an amount of time determined
                               by its rarity in the chart below
-                              Rarity               Difficulty         Crafting Time:
+                              Rarity               Difficulty         Crafting Time
                               Common Potion          DC15              2 Hours
                               Uncommon Potion        DC20              6 Hours
                               Rare Potion            DC25              12 Hours
                               Very Rare Potion       DC30              24 Hours
                               Legendary Potion       DC40              48 Hours
        - Master Alchemist: you gain one of the following features of your choice
-                           Quantity of Quality: Whenever you would create one potion, you create 2 instead
-                           Potent Potables: Potions you create that require a roll to determin its effect, now automatically produce the maximum result
-                           Reliable Replicator: you no longer need to make medicine checks when creating or replicating potions, you always succeed
+         Quantity of Quality: Whenever you would create one potion, you create 2 instead
+         Potent Potables: Potions you create that require a roll to determin its effect, now automatically produce the maximum result
+         Reliable Replicator: you no longer need to make medicine checks when creating or replicating potions, you always succeed
                            
                            
                            
-   - - Combat Medic Abilities:
+    - Combat Medic Abilities:
        - Surgical Strike: you utilize your knowledge of anatomy when making your attacks. You now add your Intelligence modifier to your attack rolls in addition to all other bonuses.
        - Extra Attack: you can attack twice, instead of once, whenever you take the Attack action on your turn.
        - Survival Tactics: you gain one of the following features.
-                           Mild Mannered: Any creature who targets you with an attack or harmful spell must first make a Wisdom saving throw or choose a new target. If you make an attack, or deal damage to another creature, this
-                                          ability ends.
-                           Frantic Strike: When surrounded by foes you lash out wildly. You can use your action to make a basic melee attack roll against any number of creatures within 5 feet of you, with a separate attack roll 
-                                           for each.
-                           Flash Flask: As a bonus action you throw a pre-prepared flask to the ground, the volatile mixture exploding in a flash of light. Any attacks made against you until the start of your next turn are made 
-                                        at disadvantage. You cannot do this again until your next short rest.
+         Mild Mannered: Any creature who targets you with an attack or harmful spell must first make a Wisdom saving throw or choose a new target. If you make an attack, or deal damage to another creature, this
+                        ability ends.
+         Frantic Strike: When surrounded by foes you lash out wildly. You can use your action to make a basic melee attack roll against any number of creatures within 5 feet of you, with a separate attack roll 
+                         for each.
+         Flash Flask: As a bonus action you throw a pre-prepared flask to the ground, the volatile mixture exploding in a flash of light. Any attacks made against you until the start of your next turn are made 
+                      at disadvantage. You cannot do this again until your next short rest.
        - Disable Organ: you have begun to recognize the weak points common in many creatures. You attempt to make a precise strike against an enemy in order to weaken it. Choose an effect below and make a regular attack roll. If
                         successful rather than doing damage the target must make a saving throw or suffer your ability’s effect. This effect lasts until the target is healed.
-                        Cripple: You target a limb, such as a leg or a wing, in order to inhibit a creature’s movement. On a success the the target's speed is reduced by half.
-                        Blind: You target the eye or eyes of a creature in order to visually impair it. Depending on the creature the DM decides how and if it can be blinded. DEX save.
-                        Disarm: You target an extremity, such as a hand or claw, that is holding an item. On a success the creature drops the item and their extrimity is disabled. STR save.
-                        Disable: You target a unique organ in order to disable a creature’s natural ability, such as its fire breath or poisonous sting. Your DM may determine an ability cannot be disabled in this way. CON save.
+         Cripple: You target a limb, such as a leg or a wing, in order to inhibit a creature’s movement. On a success the the target's speed is reduced by half.
+         Blind: You target the eye or eyes of a creature in order to visually impair it. Depending on the creature the DM decides how and if it can be blinded. DEX save.
+         Disarm: You target an extremity, such as a hand or claw, that is holding an item. On a success the creature drops the item and their extrimity is disabled. STR save.
+         Disable: You target a unique organ in order to disable a creature’s natural ability, such as its fire breath or poisonous sting. Your DM may determine an ability cannot be disabled in this way. CON save.
        - Adrenaline Shot: you have experienced enough battles that the desire to slay your foes overpowers your instincts for self-preservation. As a bonus action you inject yourself with a concoction of your own creation 
                           designed to improve your speed and reflexes. Your body surges with energy as you benefit from effects identical to that of the Haste spell. Unlike the spell however this ability lasts for 5 minutes. 
                           These effects are physical rather than magical and cannot be dispelled. Only your body can benefit from this ability due to your years of experiments. You may use this feature once per long rest.
                           
                           
                           
-   - - Sawbones Abilities:
+    - Sawbones Abilities:
        - Back Alley Medicine: you gain proficiency in the Medicine skill. If you already proficient in Medicine, you can choose another skill to become proficient in. You may use your intelligence modifier instead of your wisdom
                               modifier for medicine checks. You can use the bonus action granted by your Cunning Action to administer a potion to a creature within 5 feet of you or to make a medicine check to stabilize a dying 
                               creature. 
@@ -81,12 +81,12 @@
                        a Medicine check, the DC of which is equal to the challenge rating of the creature plus 5. On a success, you harvest an organ that does one of the following, so long as the creature had that ability. You 
                        may only attempt this ability once per dead creature. The organ can be used once to replicate the ability of the creature it came from, then it is destroyed. Any damage, modifiers, and save DCs are 
                        identical to what they were when the creature was alive.
-                       Poison: You extract the venom a creature uses. If the creature adds poison damage to any of it's attacks, you can harvest a vial of that poison. You may use a bonus action to apply the same poison to one 
-                               of your weapons. The next time that weapon hits a creature in the next minute, they suffer the effects of that poison.
-                       Breath weapon: You extract the gland responsible for a creature's breath attack. As an action, you can activate the gland and unleash it's deadly payload. 
-                       Gaze effect: You extract the eyes or other part a creature uses for a gaze ability. As an action, you can activate that organ and use the gaze ability on a creature within range.
-                       Innate spellcasting: You extract a biological element that produces magic. When you harvest this organ, choose a spell of 6th level or lower from the creature's innate spellcasting list. You can cast that 
-                                            spell through the organ once, taking the spell's normal casting time. A wizard can also dissect the organ to transcribe that spell into their spellbook, as if it were a spell scroll. 
+         Poison: You extract the venom a creature uses. If the creature adds poison damage to any of it's attacks, you can harvest a vial of that poison. You may use a bonus action to apply the same poison to one 
+                 of your weapons. The next time that weapon hits a creature in the next minute, they suffer the effects of that poison.
+         Breath weapon: You extract the gland responsible for a creature's breath attack. As an action, you can activate the gland and unleash it's deadly payload. 
+         Gaze effect: You extract the eyes or other part a creature uses for a gaze ability. As an action, you can activate that organ and use the gaze ability on a creature within range.
+         Innate spellcasting: You extract a biological element that produces magic. When you harvest this organ, choose a spell of 6th level or lower from the creature's innate spellcasting list. You can cast that 
+                              spell through the organ once, taking the spell's normal casting time. A wizard can also dissect the organ to transcribe that spell into their spellbook, as if it were a spell scroll. 
        - Adept Immunization: you've established a routine of administering small doses of poison to yourself in order to build up your body's defenses. You are immune to poison and disease. Whenever you make a constitution 
                              saving throw, you can add your intelligence modifier to the total.
        - Surgical Strikes: your attacks are guided by your anatomical expertise. Whenever you perform a sneak attack on a creature, that creature's maximum hit points are reduced by the amount of damage dealt. That creature 
@@ -95,15 +95,15 @@
                            
                            
                            
-   - - The Stitcher Abilities:
+    - The Stitcher Abilities:
        - Dark Work: Your work tends to take you to the underbelly of society, as a result, you gain the Cunning Action and Sneak Attack abilities from the Rogue Class as well as learning  Thieve's Cant
        - First Aid: you can use the bonus action granted by your Cunning Action to make a Wisdom (Medicine) check or use a Doctor's Bag.
        - Patchwork: you gain proficiency with the Doctor's Bag. You can spend 1 minute using your Doctor's Bag to treat a willing ally within 5 feet of you, causing it to regain hit points by spending a Hit Die. After a creature
                    has spent a Hit Die using this ability, it can't do so again until it finishes a long rest.
        - Surgical Precision: you can make attacks with astonishing precision. When you use your Sneak Attack feature on a creature, you can impose one of the following effects on that target
-                             Blind: It has disadvantage on the next attack roll it makes until the start of your next turn.
-                             Clot: It can't regain hit points until the start of your next turn.
-                             Cripple: Its speed is reduced by 10 feet until the start of your next turn.
+         Blind: It has disadvantage on the next attack roll it makes until the start of your next turn.
+         Clot: It can't regain hit points until the start of your next turn.
+         Cripple: Its speed is reduced by 10 feet until the start of your next turn.
        - Bloodletting: you can treat others of certain ailments using your Doctor's Bag. Doing so takes 10 minutes and causes the creature to lose a Hit Die. If it cannot, this process has no effect. Choose one disease or one 
                        condition afflicting the creature. The condition can be blinded, deafened, paralyzed, poisoned. Alternatively, you can end one effect reducing the target’s hit point maximum.
        - Examine Corpse: you can examine the bodies of fallen creatures. If you spend at least 10 minutes dissecting the corpse of a Large or smaller aberration, beast, celestial, dragon, fey, fiend, giant, humanoid, monstrosity,
